rasn-compiler-tests/tests/snapshots/simple_types__oid_value_with_well_known_references.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: "organizationRoot OBJECT IDENTIFIER ::= { iso identified-organization teletrust(36) gematik(15) organization(2) legal-entity(3) type(1) }"
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; pub static ORGANIZATION_ROOT : LazyLock < ObjectIdentifier > = LazyLock :: new (|| Oid :: const_new (& [1u32 , 3u32 , 36u32 , 15u32 , 2u32 , 3u32 , 1u32]) . to_owned ()) ; }
