rasn-compiler-tests/tests/snapshots/simple_types__teletexstring_from.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: " FQDN ::= TeletexString(FROM (\"a\"..\"z\" | \"A\"..\"Z\" | \"0\"..\"9\" | \".-\")) (SIZE (1..255))"
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , size ("1..=255"))] pub struct FQDN (pub TeletexString) ; }
